--- a/Application.GUI/ApplicationGUI.ui
+++ b/Application.GUI/ApplicationGUI.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>882</width>
+    <width>1200</width>
     <height>855</height>
    </rect>
   </property>
@@ -59,9 +59,9 @@
    <property name="geometry">
     <rect>
      <x>640</x>
-     <y>180</y>
+     <y>400</y>
      <width>221</width>
-     <height>181</height>
+     <height>221</height>
     </rect>
    </property>
    <property name="font">
@@ -72,89 +72,17 @@
    <property name="title">
     <string>Area properties</string>
    </property>
-   <widget class="QPushButton" name="btn_apply_area">
+   <widget class="QLabel" name="lbl_minAreaOfPart">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>140</y>
-      <width>75</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>9</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Apply</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="btn_reset_area">
-    <property name="geometry">
-     <rect>
-      <x>90</x>
-      <y>140</y>
-      <width>75</width>
-      <height>30</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>9</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Reset</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="lbl_areaOfPart">
-    <property name="geometry">
-     <rect>
-      <x>110</x>
-      <y>100</y>
-      <width>101</width>
+      <x>120</x>
+      <y>70</y>
+      <width>91</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
      <string/>
-    </property>
-   </widget>
-   <widget class="QLabel" name="lbl_areaOfPartLabel">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>100</y>
-      <width>91</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>9</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Area of part:</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="lbl_numOfParts">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>70</y>
-      <width>91</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>9</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Num of parts:</string>
     </property>
    </widget>
    <widget class="QLabel" name="lbl_polygonArea">
@@ -188,13 +116,13 @@
      <string>Polygon area:</string>
     </property>
    </widget>
-   <widget class="QSpinBox" name="spin_numOfParts">
+   <widget class="QLabel" name="lbl_minAreaOfPartLabel">
     <property name="geometry">
      <rect>
-      <x>110</x>
+      <x>10</x>
       <y>70</y>
-      <width>42</width>
-      <height>23</height>
+      <width>111</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="font">
@@ -202,19 +130,130 @@
       <pointsize>9</pointsize>
      </font>
     </property>
-    <property name="minimum">
-     <number>2</number>
+    <property name="text">
+     <string>Minimum area:</string>
     </property>
-    <property name="maximum">
-     <number>50</number>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
     </property>
+   </widget>
+   <widget class="QLabel" name="lbl_maxAreaOfPartLabel">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>100</y>
+      <width>111</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Maximum area:</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbl_maxAreaOfPart">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>100</y>
+      <width>91</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QFrame" name="frm_slider">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>130</y>
+      <width>221</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+    <widget class="RangeSlider" name="sld_areaOfPart">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>20</y>
+       <width>201</width>
+       <height>22</height>
+      </rect>
+     </property>
+     <property name="maximum">
+      <number>0</number>
+     </property>
+     <property name="singleStep">
+      <number>1</number>
+     </property>
+     <property name="pageStep">
+      <number>14</number>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+    <widget class="QLabel" name="sld_minPosLabel">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>40</y>
+       <width>50</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>8</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="sld_maxPosLabel">
+     <property name="geometry">
+      <rect>
+       <x>160</x>
+       <y>40</y>
+       <width>50</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>8</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QGroupBox" name="qrb_meshProperties">
    <property name="geometry">
     <rect>
      <x>640</x>
-     <y>370</y>
+     <y>140</y>
      <width>221</width>
      <height>251</height>
     </rect>
@@ -325,7 +364,7 @@
      <x>640</x>
      <y>20</y>
      <width>221</width>
-     <height>151</height>
+     <height>111</height>
     </rect>
    </property>
    <property name="font">
@@ -340,7 +379,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>110</y>
+      <y>70</y>
       <width>75</width>
       <height>30</height>
      </rect>
@@ -357,8 +396,8 @@
    <widget class="QPushButton" name="btn_reset">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>110</y>
+      <x>100</x>
+      <y>70</y>
       <width>75</width>
       <height>30</height>
      </rect>
@@ -370,94 +409,6 @@
     </property>
     <property name="text">
      <string>Reset</string>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="chb_isConvex">
-    <property name="geometry">
-     <rect>
-      <x>110</x>
-      <y>70</y>
-      <width>86</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QLabel" name="lbl_isConvex">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>70</y>
-      <width>91</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>9</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Is Convex:</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="lbl_notConvex">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>90</y>
-      <width>131</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="palette">
-     <palette>
-      <active>
-       <colorrole role="WindowText">
-        <brush brushstyle="SolidPattern">
-         <color alpha="255">
-          <red>255</red>
-          <green>0</green>
-          <blue>0</blue>
-         </color>
-        </brush>
-       </colorrole>
-      </active>
-      <inactive>
-       <colorrole role="WindowText">
-        <brush brushstyle="SolidPattern">
-         <color alpha="255">
-          <red>255</red>
-          <green>0</green>
-          <blue>0</blue>
-         </color>
-        </brush>
-       </colorrole>
-      </inactive>
-      <disabled>
-       <colorrole role="WindowText">
-        <brush brushstyle="SolidPattern">
-         <color alpha="255">
-          <red>120</red>
-          <green>120</green>
-          <blue>120</blue>
-         </color>
-        </brush>
-       </colorrole>
-      </disabled>
-     </palette>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>8</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>Polygon not convex.</string>
     </property>
    </widget>
    <widget class="QLabel" name="lbl_numOfSides">
@@ -557,6 +508,24 @@
     <enum>Qt::PlainText</enum>
    </property>
   </widget>
+  <widget class="QPushButton" name="btn_saveResults">
+   <property name="geometry">
+    <rect>
+     <x>930</x>
+     <y>440</y>
+     <width>101</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>9</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>Save Results</string>
+   </property>
+  </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
@@ -564,6 +533,11 @@
    <class>DrawingArea</class>
    <extends>QLabel</extends>
    <header>drawingarea.h</header>
+  </customwidget>
+  <customwidget>
+   <class>RangeSlider</class>
+   <extends>QSlider</extends>
+   <header>rangeslider.h</header>
   </customwidget>
  </customwidgets>
  <resources>
