--- a/Application.GUI/ApplicationGUI.ui
+++ b/Application.GUI/ApplicationGUI.ui
@@ -543,9 +543,9 @@
     <widget class="QPushButton" name="btn_saveImages">
      <property name="geometry">
       <rect>
-       <x>50</x>
-       <y>210</y>
-       <width>101</width>
+       <x>30</x>
+       <y>180</y>
+       <width>150</width>
        <height>30</height>
       </rect>
      </property>
@@ -555,15 +555,51 @@
       </font>
      </property>
      <property name="text">
-      <string>Save images</string>
+      <string>Save image</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="btn_saveMeshAsText">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>230</y>
+       <width>150</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>9</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Save mesh </string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="btn_uploadMeshFromText">
+     <property name="geometry">
+      <rect>
+       <x>30</x>
+       <y>280</y>
+       <width>150</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>9</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Upload mesh</string>
      </property>
     </widget>
     <widget class="QPushButton" name="btn_drawPoly">
      <property name="geometry">
       <rect>
-       <x>50</x>
-       <y>60</y>
-       <width>101</width>
+       <x>40</x>
+       <y>470</y>
+       <width>120</width>
        <height>30</height>
       </rect>
      </property>
@@ -580,7 +616,7 @@
      <property name="geometry">
       <rect>
        <x>50</x>
-       <y>100</y>
+       <y>510</y>
        <width>101</width>
        <height>30</height>
       </rect>
@@ -592,42 +628,6 @@
      </property>
      <property name="text">
       <string>Do algo</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="btn_saveMeshAsText">
-     <property name="geometry">
-      <rect>
-       <x>50</x>
-       <y>310</y>
-       <width>101</width>
-       <height>30</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>9</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>Save mesh </string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="btn_uploadMeshFromText">
-     <property name="geometry">
-      <rect>
-       <x>50</x>
-       <y>350</y>
-       <width>101</width>
-       <height>30</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>9</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>Upload mesh</string>
      </property>
     </widget>
    </widget>
