--- a/Application.GUI/ApplicationGUI.ui
+++ b/Application.GUI/ApplicationGUI.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>890</width>
-    <height>855</height>
+    <width>885</width>
+    <height>885</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,25 +17,6 @@
    <iconset resource="ApplicationGUI.qrc">
     <normaloff>:/ApplicationGUI/PolygonPartition.ico</normaloff>:/ApplicationGUI/PolygonPartition.ico</iconset>
   </property>
-  <widget class="DrawingArea" name="drawingArea_test">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>640</y>
-     <width>200</width>
-     <height>200</height>
-    </rect>
-   </property>
-   <property name="frameShape">
-    <enum>QFrame::Box</enum>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="textFormat">
-    <enum>Qt::PlainText</enum>
-   </property>
-  </widget>
   <widget class="DrawingArea" name="polygonDrawingArea">
    <property name="geometry">
     <rect>
@@ -43,63 +24,6 @@
      <y>22</y>
      <width>600</width>
      <height>600</height>
-    </rect>
-   </property>
-   <property name="frameShape">
-    <enum>QFrame::Box</enum>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="textFormat">
-    <enum>Qt::PlainText</enum>
-   </property>
-  </widget>
-  <widget class="DrawingArea" name="drawingArea_test_2">
-   <property name="geometry">
-    <rect>
-     <x>240</x>
-     <y>640</y>
-     <width>200</width>
-     <height>200</height>
-    </rect>
-   </property>
-   <property name="frameShape">
-    <enum>QFrame::Box</enum>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="textFormat">
-    <enum>Qt::PlainText</enum>
-   </property>
-  </widget>
-  <widget class="DrawingArea" name="drawingArea_test_3">
-   <property name="geometry">
-    <rect>
-     <x>450</x>
-     <y>640</y>
-     <width>200</width>
-     <height>200</height>
-    </rect>
-   </property>
-   <property name="frameShape">
-    <enum>QFrame::Box</enum>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="textFormat">
-    <enum>Qt::PlainText</enum>
-   </property>
-  </widget>
-  <widget class="DrawingArea" name="drawingArea_test_4">
-   <property name="geometry">
-    <rect>
-     <x>660</x>
-     <y>640</y>
-     <width>200</width>
-     <height>200</height>
     </rect>
    </property>
    <property name="frameShape">
@@ -630,6 +554,536 @@
       <string>Do algo</string>
      </property>
     </widget>
+   </widget>
+  </widget>
+  <widget class="QWidget" name="mainAlgoImages" native="true">
+   <property name="geometry">
+    <rect>
+     <x>21</x>
+     <y>620</y>
+     <width>842</width>
+     <height>251</height>
+    </rect>
+   </property>
+   <widget class="DrawingArea" name="drar_mainStages_rotated">
+    <property name="geometry">
+     <rect>
+      <x>5</x>
+      <y>45</y>
+      <width>200</width>
+      <height>200</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+   </widget>
+   <widget class="DrawingArea" name="drar_mainStages_concavePoints">
+    <property name="geometry">
+     <rect>
+      <x>217</x>
+      <y>45</y>
+      <width>200</width>
+      <height>200</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+   </widget>
+   <widget class="DrawingArea" name="drar_mainStages_convexParts">
+    <property name="geometry">
+     <rect>
+      <x>429</x>
+      <y>45</y>
+      <width>200</width>
+      <height>200</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+   </widget>
+   <widget class="DrawingArea" name="drar_mainStages_optimal">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>45</y>
+      <width>200</width>
+      <height>200</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_allConcavePartitions">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>599</x>
+      <y>44</y>
+      <width>31</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>...</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_convexPartitionStages">
+    <property name="geometry">
+     <rect>
+      <x>810</x>
+      <y>44</y>
+      <width>31</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>...</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbl_mainStages">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>10</y>
+      <width>191</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Main stages of the algorithm</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QWidget" name="convexPartsPartition" native="true">
+   <property name="geometry">
+    <rect>
+     <x>21</x>
+     <y>620</y>
+     <width>842</width>
+     <height>251</height>
+    </rect>
+   </property>
+   <widget class="DrawingArea" name="drar_convexPart_part">
+    <property name="geometry">
+     <rect>
+      <x>5</x>
+      <y>45</y>
+      <width>200</width>
+      <height>200</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+   </widget>
+   <widget class="DrawingArea" name="drar_convexPart_splittedVert">
+    <property name="geometry">
+     <rect>
+      <x>217</x>
+      <y>45</y>
+      <width>200</width>
+      <height>200</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+   </widget>
+   <widget class="DrawingArea" name="drar_convexPart_splittedFaces">
+    <property name="geometry">
+     <rect>
+      <x>429</x>
+      <y>45</y>
+      <width>200</width>
+      <height>200</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+   </widget>
+   <widget class="DrawingArea" name="drar_convexPart_optimal">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>45</y>
+      <width>200</width>
+      <height>200</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbl_convexPartitionStages">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>0</y>
+      <width>221</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Stages of convex part partition</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+    <property name="wordWrap">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_backToMainAlgoStages_fromConvexPartDetails">
+    <property name="geometry">
+     <rect>
+      <x>5</x>
+      <y>5</y>
+      <width>31</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>15</pointsize>
+     </font>
+    </property>
+    <property name="toolTip">
+     <string/>
+    </property>
+    <property name="text">
+     <string>⮰</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_goToPrevConvexPart">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>7</y>
+      <width>31</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>↶</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_goToNextConvexPart">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>7</y>
+      <width>31</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>↷</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbl_numOfConvexPart">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>21</y>
+      <width>221</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Part 100/100</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="wordWrap">
+     <bool>false</bool>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QWidget" name="convexPartitions" native="true">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>21</x>
+     <y>620</y>
+     <width>842</width>
+     <height>251</height>
+    </rect>
+   </property>
+   <widget class="DrawingArea" name="drar_partitionToConvex_current">
+    <property name="geometry">
+     <rect>
+      <x>585</x>
+      <y>45</y>
+      <width>200</width>
+      <height>200</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbl_partitionToConvexParts">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>10</y>
+      <width>181</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Partitions of the polygon into convex parts</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="wordWrap">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_backToMainAlgoStages_fromConvexPartitions">
+    <property name="geometry">
+     <rect>
+      <x>5</x>
+      <y>5</y>
+      <width>31</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>15</pointsize>
+     </font>
+    </property>
+    <property name="toolTip">
+     <string/>
+    </property>
+    <property name="text">
+     <string>⮰</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_goToPrevPartition">
+    <property name="geometry">
+     <rect>
+      <x>540</x>
+      <y>130</y>
+      <width>31</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>↶</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_goToNextPartition">
+    <property name="geometry">
+     <rect>
+      <x>800</x>
+      <y>130</y>
+      <width>31</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>↷</string>
+    </property>
+   </widget>
+   <widget class="DrawingArea" name="drar_partitionToConvex_optimal">
+    <property name="geometry">
+     <rect>
+      <x>55</x>
+      <y>45</y>
+      <width>200</width>
+      <height>200</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbl_partitionToConvexParts_optimal">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>20</y>
+      <width>111</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Optimal partition</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+    <property name="wordWrap">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbl_numOfConvexPartitions">
+    <property name="geometry">
+     <rect>
+      <x>585</x>
+      <y>20</y>
+      <width>200</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Partition 100/100</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="wordWrap">
+     <bool>false</bool>
+    </property>
    </widget>
   </widget>
  </widget>
