--- a/Application.GUI/ApplicationGUI.ui
+++ b/Application.GUI/ApplicationGUI.ui
@@ -1176,7 +1176,7 @@
    <widget class="DrawingArea" name="drar_partitionToConvex_current">
     <property name="geometry">
      <rect>
-      <x>600</x>
+      <x>603</x>
       <y>60</y>
       <width>200</width>
       <height>200</height>
@@ -1243,8 +1243,8 @@
    <widget class="QPushButton" name="btn_goToPrevPartition">
     <property name="geometry">
      <rect>
-      <x>560</x>
-      <y>140</y>
+      <x>590</x>
+      <y>25</y>
       <width>31</width>
       <height>30</height>
      </rect>
@@ -1261,8 +1261,8 @@
    <widget class="QPushButton" name="btn_goToNextPartition">
     <property name="geometry">
      <rect>
-      <x>810</x>
-      <y>140</y>
+      <x>785</x>
+      <y>25</y>
       <width>31</width>
       <height>30</height>
      </rect>
@@ -1298,9 +1298,9 @@
    <widget class="QLabel" name="lbl_partitionToConvexParts_optimal">
     <property name="geometry">
      <rect>
-      <x>85</x>
+      <x>40</x>
       <y>30</y>
-      <width>111</width>
+      <width>200</width>
       <height>21</height>
      </rect>
     </property>
@@ -1310,10 +1310,13 @@
      </font>
     </property>
     <property name="text">
-     <string>Optimal partition</string>
+     <string>Optimal partition - 15</string>
     </property>
     <property name="textFormat">
      <enum>Qt::PlainText</enum>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
     <property name="wordWrap">
      <bool>false</bool>
@@ -1322,9 +1325,9 @@
    <widget class="QLabel" name="lbl_numOfConvexPartitions">
     <property name="geometry">
      <rect>
-      <x>600</x>
+      <x>630</x>
       <y>30</y>
-      <width>200</width>
+      <width>145</width>
       <height>20</height>
      </rect>
     </property>
@@ -1334,7 +1337,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Partition 100/100</string>
+     <string>Partition 20000/20000</string>
     </property>
     <property name="textFormat">
      <enum>Qt::PlainText</enum>
@@ -1349,9 +1352,9 @@
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>266</x>
       <y>60</y>
-      <width>241</width>
+      <width>311</width>
       <height>202</height>
      </rect>
     </property>
@@ -1367,7 +1370,7 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>10</x>
+       <x>90</x>
        <y>10</y>
        <width>151</width>
        <height>41</height>
@@ -1397,7 +1400,7 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>10</x>
+       <x>90</x>
        <y>70</y>
        <width>151</width>
        <height>55</height>
@@ -1427,7 +1430,7 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>10</x>
+       <x>90</x>
        <y>140</y>
        <width>151</width>
        <height>51</height>
@@ -1457,7 +1460,7 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>170</x>
+       <x>245</x>
        <y>20</y>
        <width>60</width>
        <height>21</height>
@@ -1469,7 +1472,7 @@
       </font>
      </property>
      <property name="text">
-      <string>4354623</string>
+      <string>1000.23</string>
      </property>
      <property name="textFormat">
       <enum>Qt::PlainText</enum>
@@ -1487,9 +1490,9 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>170</x>
+       <x>245</x>
        <y>160</y>
-       <width>65</width>
+       <width>60</width>
        <height>21</height>
       </rect>
      </property>
@@ -1517,7 +1520,7 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>170</x>
+       <x>245</x>
        <y>90</y>
        <width>60</width>
        <height>21</height>
@@ -1536,6 +1539,96 @@
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+     <property name="wordWrap">
+      <bool>false</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="lbl_info_nonDividedArea_optimal">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>5</x>
+       <y>20</y>
+       <width>60</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>9</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>1000.23</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::PlainText</enum>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+     <property name="wordWrap">
+      <bool>false</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="lbl_info_notDividedPercent_optimal">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>5</x>
+       <y>90</y>
+       <width>60</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>9</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>1.25%</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::PlainText</enum>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+     <property name="wordWrap">
+      <bool>false</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="lbl_info_optimisationFuncValue_optimal">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>5</x>
+       <y>160</y>
+       <width>60</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>9</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>25.65</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::PlainText</enum>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
      </property>
      <property name="wordWrap">
       <bool>false</bool>
